--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charset="UTF-8" http-equiv="X-UA-Compatible" content="IE=9">
+    <hta:application
+        id=oHTA
+        icon=Powershell.exe
+    >
     <title>Document</title>
 </head>
 <body>
