--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     >
     <title>Document</title>
 </head>
-<body>
+<body style="height: 600px; width: 600px;">
     <H1>Welcome</H1>
 </body>
 </html>
