--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </symbol>
 </svg>
 <main>
-  <h1 class="visually-hidden">Features examples</h1>
+  <h1 class="visually-hidden">Features</h1>
 
   <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 border-bottom">Columns with icons</h2>
@@ -210,34 +210,23 @@
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link">
-          Call to action
-          <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-        </a>
+        <h3 class="fs-2">Microsoft Teams</h3>
+        <p>Mantenha-se sempre online no Teams</p>
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link">
-          Call to action
-          <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-        </a>
+        <h3 class="fs-2">Slack</h3>
+        <p>Mantenha-se sempre online no Slack</p>
+
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link">
-          Call to action
-          <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-        </a>
+        <h3 class="fs-2">Windows</h3>
+        <p>Windows sempre ativo, tela não bloqueia mesmo com regras empresarias para bloqueio de tela.</p>
       </div>
     </div>
   </div>
