--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features with title</h2>
+    <h2 class="pb-2 border-bottom">Features</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
-        <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="btn btn-primary btn-lg">Primary button</a>
+        <h3 class="fw-bold">Always online</h3>
+        <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
+        <a href="#" class="btn btn-primary btn-lg">Dowload</a>
       </div>
 
       <div class="col">
@@ -222,8 +222,8 @@
                 <use xlink:href="#collection" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">Featured title</h4>
-            <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+            <h4 class="fw-semibold mb-0">Microsoft Teams</h4>
+            <p class="text-body-secondary">Always stay online in Teams.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -232,8 +232,8 @@
                 <use xlink:href="#gear-fill" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">Featured title</h4>
-            <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+            <h4 class="fw-semibold mb-0">Slack</h4>
+            <p class="text-body-secondary">Always stay online in Slack.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -242,8 +242,8 @@
                 <use xlink:href="#speedometer" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">Featured title</h4>
-            <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+            <h4 class="fw-semibold mb-0">Windows</h4>
+            <p class="text-body-secondary">Windows always on, screen doesn't lock even with business rules for screen lock.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -252,8 +252,8 @@
                 <use xlink:href="#table" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">Featured title</h4>
-            <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+            <h4 class="fw-semibold mb-0">New Features Comming</h4>
+            <p class="text-body-secondary">Just wait.</p>
           </div>
         </div>
       </div>
