--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="auto">
   <head><script src="../assets/js/color-modes.js"></script>
     
-    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5211685880333140"
      crossorigin="anonymous"></script>
 
