--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features</h2>
+    <h2 class="pb-2 border-bottom">Features of Always online</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
