--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features of Always online</h2>
+    <h2 class="pb-2 border-bottom">Features of Always ON</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always online</h3>
+        <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
         <a href="#" class="btn btn-primary btn-lg">Dowload</a>
       </div>
