--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
   <head><script src="../assets/js/color-modes.js"></script>
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5211685880333140"
-     crossorigin="anonymous"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -209,11 +205,11 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features of Always ON</h2>
+    <h2 class="pb-2 border-bottom">Features</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always ON</h3>
+        <h3 class="fw-bold">Always online</h3>
         <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
         <a href="#" class="btn btn-primary btn-lg">Dowload</a>
       </div>
@@ -263,6 +259,22 @@
       </div>
     </div>
   </div>
+
+
+
+  <div class="b-example-divider"></div>
+
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom">Features</h2>
+
+    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Always online</h3>
+        <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
+      </div>
+    </div>
+  </div>
+  
 </main>
 
 
