--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always online</h3>
-        <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
+        <p class="text-body-secondary">This is a free and freely accessible application. By using it, you are assuming all the risks of its use (Hadrdware, software, legal proceedings, etc...).</p>
       </div>
     </div>
   </div>
