--- a/index.html
+++ b/index.html
@@ -265,12 +265,25 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Termo De Uso</h2>
+    <h2 class="pb-2 border-bottom">Terms of use</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always online</h3>
         <p class="text-body-secondary">This is a free and freely accessible application. By using it, you are assuming all the risks of its use (Hadrdware, software, legal proceedings, etc...).</p>
+      </div>
+    </div>
+  </div>
+  
+   <div class="b-example-divider"></div>
+
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom">Know Issues</h2>
+
+    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Always online</h3>
+        <p class="text-body-secondary">This application uses keyboard mouse and windows processes to keep you always online. In some cases you may be using some of the keys that the application is also using, making it uncomfortable to use some programs.</p>
       </div>
     </div>
   </div>
