--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always online</h3>
+        <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
         <a href="#" class="btn btn-primary btn-lg">Dowload</a>
       </div>
@@ -221,7 +221,7 @@
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always online</h3>
+        <h3 class="fw-bold">Always ONe</h3>
         <p class="text-body-secondary">This is a free and freely accessible application. By using it, you are assuming all the risks of its use (Hadrdware, software, legal proceedings, etc...).</p>
       </div>
     </div>
@@ -234,7 +234,7 @@
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always online</h3>
+        <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">This application uses keyboard mouse and windows processes to keep you always online. In some cases you may be using some of the keys that the application is also using, making it uncomfortable to use some programs.</p>
       </div>
     </div>
