--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
         <a href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/SempreOnline.exe" class="btn btn-primary btn-lg">Dowload</a>
+        <p class="text-body-secondary">v2.0.0 valida ate 31/05/2023</p>
       </div>
 
       <div class="col">
