--- a/index.html
+++ b/index.html
@@ -150,7 +150,16 @@
 <main>
 
   <div class="b-example-divider"></div>
-
+  
+  <div class="container px-4 py-5">
+  <h2 class="pb-2 border-bottom">Features</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mxJRW9CJBTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+  
+  
+  <div class="b-example-divider"></div>
+  
+  
   <div class="container px-4 py-5">
     <h2 class="pb-2 border-bottom">Features</h2>
 
