--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 
   <div class="b-example-divider"></div>
   
-  <div class="container px-4 py-5">
-  <h2 class="pb-2 border-bottom">Features</h2>
+  <div class="container px-4 py-5 d-flex justify-content-center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mxJRW9CJBTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   
