--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
      crossorigin="anonymous"></script>
     
     <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SXNBHNMPQ"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKT5BTTRTH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        gtag('config', 'G-5SXNBHNMPQ');
-      </script>
+      gtag('config', 'G-BKT5BTTRTH');
+    </script>
 
 
     <meta charset="utf-8">
