--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
   <div class="b-example-divider"></div>
   
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features</h2>
+    <h2 class="pb-2 border-bottom">O que é:</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always ON</h3>
-        <p class="text-body-secondary">A project to always keep you online and available without blocking windows.</p>
+        <p class="text-body-secondary">Este é um projeto que utilizada dos eventos do windows como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Alem de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador.</p>
         <a href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-primary btn-lg">Dowload</a>
         <p class="text-body-secondary">v2.0.3 valida ate 30/06/2023</p>
       </div>
