--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </svg>
             </div>
             <h4 class="fw-semibold mb-0">Microsoft Teams</h4>
-            <p class="text-body-secondary">Always stay online in Teams.</p>
+            <p class="text-body-secondary">Permite que seu status no Teams fique sempre online, uma vez que o programa simula uma pessoa utilizando o computador.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -197,8 +197,8 @@
                 <use xlink:href="#gear-fill" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">Slack</h4>
-            <p class="text-body-secondary">Always stay online in Slack.</p>
+            <h4 class="fw-semibold mb-0">Outras Plataformas</h4>
+            <p class="text-body-secondary">Assim como o Teams e varias outras plataformas, você estará sempre online.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -208,7 +208,7 @@
               </svg>
             </div>
             <h4 class="fw-semibold mb-0">Windows</h4>
-            <p class="text-body-secondary">Windows always on, screen doesn't lock even with business rules for screen lock.</p>
+            <p class="text-body-secondary">Alguns computadores empresariais utilizam regras sobre o windows como não poder alterar papel de parede e tempo limite de tela em descanso. Esta aplicação te mantem sempre emitindo comando no windows, dessa forma sua tela nunca entra em descaço e bloqueia.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
@@ -217,8 +217,8 @@
                 <use xlink:href="#table" />
               </svg>
             </div>
-            <h4 class="fw-semibold mb-0">New Features Comming</h4>
-            <p class="text-body-secondary">Just wait.</p>
+            <h4 class="fw-semibold mb-0">Totalmente Seguro</h4>
+            <p class="text-body-secondary">Está aplicação se trata de um simples script conhecido na internet para este fim. Leve e totalmente livre de virus. Por não ser certificada alguns antivirus e softwares pode acusar o arquivo como suspeito, no entando não há como o que se preocupar.</p>
           </div>
         </div>
       </div>
@@ -228,27 +228,17 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Terms of use</h2>
+    <h2 class="pb-2 border-bottom">Termos de Uso</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always ON</h3>
-        <p class="text-body-secondary">This is a free and freely accessible application. By using it, you are assuming all the risks of its use (Hadrdware, software, legal proceedings, etc...).</p>
+        <p class="text-body-secondary">
+        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto pode ser utilizado de varias formas, sendo assim responsabilidade total os fins de seu uso.</p>
       </div>
     </div>
   </div>
   
-   <div class="b-example-divider"></div>
-
-  <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Know Issues</h2>
-
-    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
-      <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always ON</h3>
-        <p class="text-body-secondary">This application uses keyboard mouse and windows processes to keep you always online. In some cases you may be using some of the keys that the application is also using, making it uncomfortable to use some programs.</p>
-      </div>
-    </div>
   </div>
   
 </main>
