--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="col d-flex flex-column gap-2">
             <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
               <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#gear-fill" />
+                <use xlink:href="#collection" />
               </svg>
             </div>
             <h4 class="fw-semibold mb-0">Outras Plataformas</h4>
@@ -211,7 +211,7 @@
           <div class="col d-flex flex-column gap-2">
             <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
               <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#speedometer" />
+                <use xlink:href="#collection" />
               </svg>
             </div>
             <h4 class="fw-semibold mb-0">Windows</h4>
@@ -221,7 +221,7 @@
           <div class="col d-flex flex-column gap-2">
             <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
               <svg class="bi" width="1em" height="1em">
-                <use xlink:href="#table" />
+                <use xlink:href="#collection" />
               </svg>
             </div>
             <h4 class="fw-semibold mb-0">Totalmente Seguro</h4>
