--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">
-        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total os fins de seu uso.</p>
+        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total dos seus usuários os fins de seu uso.</p>
       </div>
     </div>
   </div>
