--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always ON</h3>
-        <p class="text-body-secondary">Este é um projeto que utilizada dos eventos do windows como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
+        <p class="text-body-secondary">Este é um projeto que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
         <a href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Dowload</a>
         <p class="text-body-secondary">Caso tenha problemas com download veja nosos video explicativo <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
       </div>
@@ -205,7 +205,7 @@
 
           <div class="col d-flex flex-column gap-2">
             <h4 class="fw-semibold mb-0">Totalmente Seguro</h4>
-            <p class="text-body-secondary">Está aplicação se trata de um simples script conhecido na internet para este fim. Leve e totalmente livre de vírus. Por não ser certificada alguns antivírus e softwares pode acusar o arquivo como suspeito, mas não há como o que se preocupar.</p>
+            <p class="text-body-secondary">Está aplicação se trata de um simples script conhecido na internet para este fim. Leve e totalmente livre de vírus. Por não ser certificado alguns antivírus e softwares pode acusar o arquivo como suspeito, mas não há com o que se preocupar.</p>
           </div>
         </div>
       </div>
