--- a/index.html
+++ b/index.html
@@ -228,8 +228,17 @@
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">
-        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total dos seus usuários os fins de seu uso.</p>
+        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total dos seus usuários os fins de seu uso.
+        </p>
       </div>
+      
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Fale Conosco</h3>
+        <p class="text-body-secondary">
+        Você pode entrar em contato conosco atraves do nosso chat das 09 ás 18h. Ou deixar um email tambem atraves do nosso chat.
+        </p>
+      </div>
+      
     </div>
   </div>
   
