--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
   <div class="b-example-divider"></div>
 
   <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom">Termos de Uso</h2>
+    <h2 class="pb-2 border-bottom"></h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Always ON</h3>
+        <h3 class="fw-bold">Termos de Uso</h3>
         <p class="text-body-secondary">
         Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total dos seus usuários os fins de seu uso.
         </p>
