--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
         <p class="text-body-secondary">Este é um projeto que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
         <div class="row">
           <div class="col-5">
-            <a style="FONT-SIZE: 13PX;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip" class="btn btn-success btn-lg">Download zip</a>
+            <a style="FONT-SIZE: 13PX; font-weight: bold;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip" class="btn btn-success btn-lg">Download zip</a>
           </div>
           <div class="col-5">
-               <a style="FONT-SIZE: 13PX;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Download exe</a>
+               <a style="FONT-SIZE: 13PX; font-weight: bold;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Download exe</a>
           </div>
         </div>
         <p class="text-body-secondary">Caso tenha problemas com download veja nosos video explicativo <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
