--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
   <div class="b-example-divider"></div>
   
   <div class="container px-4 py-5">
+    <img src="./banner.png">
     <h2 class="pb-2 border-bottom"></h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
