--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <style>
       
-      .body {
+      body {
         background-image: url(https://img.freepik.com/free-vector/white-background-with-blue-tech-hexagon_1017-19366.jpg?w=2000);
         background-repeat: no-repeat;
         background-size: cover;
