--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <div class="col d-flex flex-column gap-2">
             <h4 class="fw-semibold mb-0">Totalmente Seguro</h4>
-            <p class="text-body-secondary">Está aplicação se trata de um simples script conhecido na internet para este fim. Leve e totalmente livre de vírus. Por não ser certificado alguns antivírus e softwares pode acusar o arquivo como suspeito, mas não há com o que se preocupar.</p>
+            <p class="text-body-secondary">Está aplicação se trata de um simples script conhecido na internet para este fim. Leve e totalmente livre de vírus. Por não ser certificado alguns antivírus e o windows podem acusar nosso arquivo como suspeito, mas não há com o que se preocupar. Em casos de problemas entre em contato como nosso chat.</p>
           </div>
         </div>
       </div>
