--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         
-        <h3 class="fw-bold">Faça já o download para seu disposiíivo Windows</h3>
+        <h3 class="fw-bold">Faça já o download para seu dispositivo Windows</h3>
         <div class="row">
           <div class="col-5">
             <a style="FONT-SIZE: 13PX; font-weight: bold;background-color: #1e297e !important;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip" class="btn btn-success btn-lg">Download zip</a>
