--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
       <div class="col d-flex flex-column align-items-start gap-2">
         
         <h3 class="fw-bold">Faça já o download para seu dispositivo Windows</h3>
-        <div class="row">
+        <div class="row" style="width: 100%;">
           <div class="col-5">
-            <a style="FONT-SIZE: 13PX; font-weight: bold;background-color: #1e297e !important;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip" class="btn btn-success btn-lg">Download zip</a>
+            <a style="font-weight: bold;width: 100%;background-color: #1e297e !important;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip" class="btn btn-success btn-lg">Download zip</a>
           </div>
           <div class="col-5">
-               <a style="FONT-SIZE: 13PX; font-weight: bold;background-color: #1e297e !important;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Download exe</a>
+               <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Download exe</a>
           </div>
         </div>
-        <p class="text-body-secondary">Caso tenha problemas com download veja nosos video explicativo <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
+        <p class="text-body-secondary">Caso tenha problemas veja nosos video explicativo clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
         
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
