--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <style>
       
       body {
-        background-image: url(https://img.freepik.com/free-vector/white-background-with-blue-tech-hexagon_1017-19366.jpg?w=2000);
+        background-image: linear-gradient(rgb(255 255 255 / 50%), rgb(255 255 255 / 98%)), url(https://img.freepik.com/free-vector/white-background-with-blue-tech-hexagon_1017-19366.jpg?w=2000);
         background-repeat: no-repeat;
         background-size: cover;
       }
