--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
         <p class="text-body-secondary">Caso tenha problemas veja nosos video explicativo clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
         
         <h3 class="fw-bold">Always ON</h3>
-        <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
+        <p class="text-body-secondary">Versão Atual: V2.0.4 <br>
+          Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
 
 
       </div>
