--- a/index.html
+++ b/index.html
@@ -196,11 +196,8 @@
           </div>
         </div>
         <p class="text-body-secondary">Versão Atual: V2.0.4 <br>Caso tenha problemas veja nosos video explicativo clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
-        
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
-
-
       </div>
 
       <div class="col">
@@ -229,7 +226,21 @@
     </div>
   </div>
 
-  <div class="b-example-divider"></div>
+  <div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom"></h2>
+
+    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Faendo o Download </h3>
+        <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente. Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
+      </div>
+      
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Executando seu arquivo</h3>
+        <p class="text-body-secondary">Novamente o Windows pode te alertar que este é um arquivo não assinado digitalmente. clique em "Mais informações" e em seguida clique em "Executar assim mesmo". Esta mensagem não aparecerá outra vez</p>
+      </div>
+    </div>
+  </div>
 
   <div class="container px-4 py-5">
     <h2 class="pb-2 border-bottom"></h2>
