--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold">Faendo o Download </h3>
+        <h3 class="fw-bold">Fazendo o Download </h3>
         <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente. Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
       </div>
       
