--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;" href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe" class="btn btn-success btn-lg">Baixar</a>
           </div>
         </div>
-        <p class="text-body-secondary">Versão Atual: V2.0.4 <br>Antes de Baixar leia nossa artigo abaixo, <a href="#download">fazendo dowload</a> e <a href="#download">executando seu arquivo</a>.<a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a></p>
+        <p class="text-body-secondary">Versão Atual: V2.0.4 <br>Antes de Baixar leia nosso artigo abaixo, <a href="#download">fazendo dowload</a> ou assista nosso video explicativo <a href="https://www.youtube.com/watch?v=V4NffxK86-k" target="_blank">clicando aqui</a>.</p>
         <h3 class="fw-bold">Always ON</h3>
         <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador, permitindo assim que você esteja sempre online em suas aplicações. Além de impedir que regras empresariais como limite de tempo em descaço seja executada bloqueando seu computador. Saiba mais através de nosso video clicando <a href="https://www.youtube.com/watch?v=mxJRW9CJBTw" target="_blank">aqui</a>.</p>
       </div>
