--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 id="download" class="fw-bold">Fazendo o Download </h3>
         <p class="text-body-secondary">Em alguns casos seu navegador pode bloquear o seu download por não ser um software assinado digitalmente(Pretendemos Assiná-lo em Breve). Mas não se preocupe você está seguro. Procure o alerta e mantenha seu arquivo. Caso seu antivírus faça o mesmo permita o arquivo em seu computador.</p>
-        <img src="browserError.png">
+        <img src="browserError.png" style="width: 100%;">
       </div>
       
       <div class="col d-flex flex-column align-items-start gap-2">
