--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
     <style>
       
+      a.navbar-brand:hover {
+        background-color: #e8e9ea;
+      }
+      
       body {
         background-image: linear-gradient(rgb(255 255 255 / 50%), rgb(255 255 255 / 98%)), url(https://img.freepik.com/free-vector/white-background-with-blue-tech-hexagon_1017-19366.jpg?w=2000);
         background-repeat: no-repeat;
