--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold" id="termosDeUso">Termos de Uso</h3>
         <p class="text-body-secondary">
-        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim responsabilidade total dos seus usuários os fins de seu uso.
+        Esta aplicação é totalmente gratuito, e se utiliza apenas de seu site para prosperar, no entanto, pode ser utilizado de várias formas, sendo assim ao usar nosso software você se compromete em não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública total dos seus usuários os fins de seu uso.
         </p>
       </div>
       
