--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
         <h3 class="fw-bold" id="politicaDePrivacidade">Política de Privacidade</h3>
-        <p>Nossa&nbsp;<a href="https://jeanoliveiragomes.github.io/politica-privacidade.html">política de privacidade</a>&nbsp;explica como tratamos seus dados pessoais e protegemos sua privacidade quando você usa nossos Serviços. Ao utilizar nossos Serviços, você concorda que a Google pode usar tais dados de acordo com nossa política de privacidade. Você e o Google também concordam com os&nbsp;<a href="https://privacy.google.com/businesses/controllerterms/">Termos de proteção de dados Controlador-Controlador do Google Ads</a>.</p>
+        <p>Nossa&nbsp;<a href="https://jeanoliveiragomes.github.io/politica-privacidade.html" target="_blank">política de privacidade</a>&nbsp;explica como tratamos seus dados pessoais e protegemos sua privacidade quando você usa nossos Serviços. Ao utilizar nossos Serviços, você concorda que a Google pode usar tais dados de acordo com nossa política de privacidade. Você e o Google também concordam com os&nbsp;<a href="https://privacy.google.com/businesses/controllerterms/" target="_blank">Termos de proteção de dados Controlador-Controlador do Google Ads</a>.</p>
       </div>      
     </div>
    </div>
