--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>AlwaysOn</title>
-
+    <link rel="icon" type="image/x-icon" href="/icon8-conectado-48.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/features/">
+    
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
