--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <div class="col d-flex flex-column gap-2">
             <h4 class="fw-semibold mb-0">Outras Plataformas</h4>
-            <p class="text-body-secondary">Assim como o Teams e várias outras plataformas, você estará sempre online.</p>
+            <p class="text-body-secondary">Assim como o Teams e várias outras plataformas(ZOOM, Google Meet...), você estará sempre online.</p>
           </div>
 
           <div class="col d-flex flex-column gap-2">
