--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     })();
     </script>
     <!--End of Tawk.to Script-->
+    
+    <!--awin verificacao-->
+    <meta name="verification" content="8de66a2bb467b00790c50edc412352af" />
 
 
     <meta charset="utf-8">
