--- a/index.html
+++ b/index.html
@@ -194,11 +194,15 @@
     <img style="height: 300px; width: 100%;border-radius: 21px;" src="banner3.png">
     <h2 class="pb-2 border-bottom"></h2>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#faleConosco">Fale Conosoco</a>
-        <a class="navbar-brand" href="#termosDeUso">Termos de Uso</a>
-        <a class="navbar-brand" href="#politicaDePrivacidade">Política de privacidade</a>
-    </nav>
+    <div class="container">
+      <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a href="#faleConosco" class="nav-link active" aria-current="page">Fale Conosoco</a></li>
+          <li class="nav-item"><a href="#termosDeUs" class="nav-link">Termos de Uso</a></li>
+          <li class="nav-item"><a href="#politicaDePrivacidad" class="nav-link">Política de privacidade</a></li>
+        </ul>
+      </header>
+    </div>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
