--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <div class="container">
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#faleConosco" class="nav-link active" aria-current="page">Fale Conosoco</a></li>
-          <li class="nav-item"><a href="#termosDeUs" class="nav-link">Termos de Uso</a></li>
-          <li class="nav-item"><a href="#politicaDePrivacidad" class="nav-link">Política de privacidade</a></li>
+          <li class="nav-item"><a href="#faleConosco" class="nav-link" aria-current="page">Fale Conosoco</a></li>
+          <li class="nav-item"><a href="#termosDeUso" class="nav-link">Termos de Uso</a></li>
+          <li class="nav-item"><a href="#politicaDePrivacidade" class="nav-link">Política de privacidade</a></li>
         </ul>
       </header>
     </div>
