--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
           <li class="nav-item"><a href="#faleConosco" class="nav-link" aria-current="page">Fale Conosoco</a></li>
           <li class="nav-item"><a href="#termosDeUso" class="nav-link">Termos de Uso</a></li>
           <li class="nav-item"><a href="#politicaDePrivacidade" class="nav-link">Política de privacidade</a></li>
+          <li class="nav-item"><a href="#politicaDePrivacidade" class="nav-link">Política de privacidade</a></li>
+          <li class="nav-item"><a href="/blog/recomendacoes.html" class="nav-link">Blog</a></li>
         </ul>
       </header>
     </div>
