--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
     </div>
   </div>
 
+  <!--Espaco para anuncios-->
+  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+    <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0" style="
+    max-width: 75%;
+    margin-left: 15%;">
+  </a>
+
   <div class="container px-4 py-5">
     <h2 class="pb-2 border-bottom"></h2>
 
