--- a/index.html
+++ b/index.html
@@ -243,11 +243,17 @@
   </div>
 
   <!--Espaco para anuncios-->
-  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
-    <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0" style="
-    max-width: 75%;
-    margin-left: 15%;">
-  </a>
+    <div class="container">
+      <div class="row marcador align-items-center">
+        <div class="col mx-auto text-center">
+          <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+            <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
+              style="max-width: 100%;">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!--Fim Espaco para anuncios-->
 
   <div class="container">
     <h2 class=" border-bottom"></h2>
