--- a/index.html
+++ b/index.html
@@ -281,10 +281,36 @@
     <div class="container">
       <div class="row marcador align-items-center">
         <div class="col mx-auto text-center">
-          <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
-            <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
-              style="max-width: 100%;">
-          </a>
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
+                    style="max-width: 100%;">
+                </a>
+              </div>
+              <div class="carousel-item">
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
+                    style="max-width: 100%;">
+                </a>
+              </div>
+              <div class="carousel-item">
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
+                    style="max-width: 100%;">
+                </a>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
