--- a/index.html
+++ b/index.html
@@ -290,15 +290,18 @@
                 </a>
               </div>
               <div class="carousel-item">
-                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
-                  <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
-                    style="max-width: 100%;">
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314275&v=17884&q=391846&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314275&v=17884&q=391846&r=1365819" border="0">
                 </a>
               </div>
               <div class="carousel-item">
-                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
-                  <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
-                    style="max-width: 100%;">
+              <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314277&v=17884&q=391846&r=1365819">
+                <img src="https://www.awin1.com/cshow.php?s=3314277&v=17884&q=391846&r=1365819" border="0">
+              </a>
+              </div>
+              <div class="carousel-item">
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314276&v=17884&q=391846&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314276&v=17884&q=391846&r=1365819" border="0">
                 </a>
               </div>
             </div>
