--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
+    .carousel-inner img {
+        max-width: 100%;
+    }
+
     a.navbar-brand:hover {
       background-color: #e8e9ea;
     }
