--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <style>
     .carousel-inner img {
-        max-width: 100%;
+      max-width: 100%;
     }
 
     a.navbar-brand:hover {
@@ -211,7 +211,76 @@
     </symbol>
   </svg>
   <main>
-    <div class="container px-4 py-5">
+    <div class="container px-1 py-2">
+
+      <!--Espaco para anuncios TOPO-->
+      <nav class="navbar sticky-top navbar-light bg-light" style="height: 110px;">
+        <div class="row marcador align-items-center" style="width: 100%;">
+          <div class="col mx-auto text-center">
+            <div id="carouselExampleAutoplayingTop" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+
+                <div class="carousel-item active">
+
+                  <!-- START ADVERTISER: C&A BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3163516&v=17648&q=429779&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3163516&v=17648&q=429779&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: C&A BR from awin.com -->
+
+                </div>
+
+                <div class="carousel-item">
+                  <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2866769&v=17697&q=411633&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=2866769&v=17697&q=411633&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: Dafiti BR from awin.com -->
+                </div>
+
+                <div class="carousel-item">
+                  <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2905207&v=17697&q=388572&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=2905207&v=17697&q=388572&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: Dafiti BR from awin.com -->
+                </div>
+
+                <div class="carousel-item">
+
+                  <!-- START ADVERTISER: Drogaria Venancio BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3354127&v=47165&q=460543&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3354127&v=47165&q=460543&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: Drogaria Venancio BR from awin.com -->
+
+                </div>
+
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplayingTop"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplayingTop"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!--Espaco para anuncios TOPO-->
+
       <img style="height: 300px; width: 100%;border-radius: 21px;" src="banner3.png">
       <h2 class="pb-2 border-bottom"></h2>
 
@@ -281,6 +350,10 @@
       </div>
     </div>
 
+
+
+
+
     <!--Espaco para anuncios-->
     <div class="container">
       <div class="row marcador align-items-center">
@@ -288,27 +361,30 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
+                <a rel="sponsored"
+                  href="https://www.awin1.com/cread.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819">
                   <img src="https://www.awin1.com/cshow.php?s=3314273&amp;v=17884&amp;q=391846&amp;r=1365819" border="0"
                     style="max-width: 100%;">
                 </a>
               </div>
               <div class="carousel-item">
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2889442&v=17715&q=413963&r=1365819">
-                    <img src="https://www.awin1.com/cshow.php?s=2889442&v=17715&q=413963&r=1365819" border="0">
+                  <img src="https://www.awin1.com/cshow.php?s=2889442&v=17715&q=413963&r=1365819" border="0">
                 </a>
               </div>
               <div class="carousel-item">
-              <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314277&v=17884&q=391846&r=1365819">
-                <img src="https://www.awin1.com/cshow.php?s=3314277&v=17884&q=391846&r=1365819" border="0">
-              </a>
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3314277&v=17884&q=391846&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3314277&v=17884&q=391846&r=1365819" border="0">
+                </a>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
