--- a/index.html
+++ b/index.html
@@ -221,15 +221,13 @@
               <div class="carousel-inner">
 
                 <div class="carousel-item active">
-
                   <!-- START ADVERTISER: C&A BR from awin.com -->
 
-                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3163516&v=17648&q=429779&r=1365819">
-                    <img src="https://www.awin1.com/cshow.php?s=3163516&v=17648&q=429779&r=1365819" border="0">
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3163539&v=17648&q=429787&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3163539&v=17648&q=429787&r=1365819" border="0">
                   </a>
 
                   <!-- END ADVERTISER: C&A BR from awin.com -->
-
                 </div>
 
                 <div class="carousel-item">
@@ -250,6 +248,18 @@
                   </a>
 
                   <!-- END ADVERTISER: Dafiti BR from awin.com -->
+                </div>
+
+                <div class="carousel-item">
+
+                  <!-- START ADVERTISER: Drogaria Venancio BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3354127&v=47165&q=460543&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3354127&v=47165&q=460543&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: Drogaria Venancio BR from awin.com -->
+
                 </div>
 
                 <div class="carousel-item">
